--- a/README
+++ b/README
@@ -5,21 +5,30 @@ To compile:
 	(1) Determine where you want to install the editor program and the
 	    system default keymap file.  Put this path in the Makefile.  If
 	    you're a mere user, don't worry about this.  Instead, place a copy
-	    of the '.joerc' file in your home directory. 
+	    of the '.joerc' file in your home directory.  
 
 	(2) If you need to be able to display characters with bit 7 set as-
 	    is (instead of in inverse), comment out the '#define NOHIGHBIT'
-	    line in the file 'joe.h'
+	    line in the file 'joe.h' 
 
 	(3) type 'make xenix' for Xenix systems, 'make hpux' for HPUX systems
-	    or 'make bsd' for BSD systems.  If none of these work, type
-	    'make cruddy' to make a version with an inferior terminal driver.
+	    or 'make bsd' for BSD systems, 'make posix' for AIX systems or
+	    'make esix' for esix systems.  If none of these work, type 'make
+	    linux' or 'make cruddy' to make a version with an inferior
+	    terminal driver (The linux version is for system V systems
+	    without timers or asynchronous ttys.  Cruddy is for systems which
+	    don't even have a termio structure).
 
 	(4) To install it in the system, log in as superuser and do
 	    'make install'
 
-	(5) When JOE is used, be sure the baud rate as reported by stty is correctly
-	    set.  If you're not on a real serial terminal, try to set the baud
-	    rate to the best guess of what the actual throughput is.  In particular,
-	    if you use JOE on a windowing system, the window updates will be much
-	    faster if you set the baud rate to 'extb' or '38400'.
+	(5) When JOE is used, be sure the baud rate as reported by stty is
+	    correctly set.  If you're not on a real serial terminal, try to
+	    set the baud rate to the best guess of what the actual throughput
+	    is.  In particular, if you use JOE on a windowing system, the
+	    window updates will be much faster if you set the baud rate to
+	    'extb' or '38400'.  
+
+	(6) PC users may wish to change the line 'backs   ^?' in the .joerc
+	    file to 'delch    ^?'.  This way, the Del key deletes characters
+	    instead of backspacing.
