--- a/joe.1
+++ b/joe.1
@@ -7,27 +7,48 @@ joe \- Joe's Own Editor
 .BR joe
 .SH DESCRIPTION
 JOE is a screen editor designed to be easy to learn for novice users and
-powerfull enough for experienced users.  After you invoke the editor, you can
-hit ^K H ('^' mean hold the Ctrl key down while pressing the following key) to
-turn on the help text.  From this you should be able to figure out how to use
-the editor.  A few things need further explanation however:
+powerfull enough to be usefull for experienced users.  After you invoke the
+editor, you can hit ^K H ('^' mean hold the Ctrl key down while pressing the
+following key) to turn on the help text.  From this you should be able to
+figure out how to use the editor.  A few things need further explanation
+however. 
 
-JOE uses the "TERM" environment entry and termcap to determine the height and
-width of the screen and to determine if the terminal uses scrolling regions. 
-Except for these differences the terminal must be ANSI/VT100 compatible.
+Note that JOE is a student written program and is not supported by WPI or the
+CCC.  This means that JOE will not be maintained by the CCC staff and that the
+CCC staff do not have to help you use it.  Use this program at your own risk. 
+However, as long as the author of the program is here at WPI, he will be glad
+to help you.  Mail any questions you have to 'rcarter@wpi.wpi.edu'
+
+.SH USEAGE
+JOE uses the "TERM" environment variable and the termcap database to determine
+the height and width of the screen and to determine if the terminal uses
+scrolling regions.  Except for these differences the terminal must be
+ANSI/VT100 compatible.  
+
+JOE also tries to get the width and the height of the screen from the
+TIOCGSIZE ioctl if your system supports it and if it reports that its values
+are valid.  This allows JOE to use resizable windows.  Unfortunately, the
+values returned by TIOCGSIZE are occasionally wrong when JOE is used on a
+normal serial terminal.  If you find that this is the case, you can force the
+values TIOCGSIZE returns by typing the commands: 'stty rows 24' and 'stty cols
+80'
+
+To customize the help screen or the key bindings, copy the file
+/usr/local/stusrc/joe/.joerc to your home directory and modify it.  The
+comments at the beginning of the file explain how to do this. 
 
 Be sure that the baud rate as reported by stty is correct.  JOE uses this
 to optimize its screen writes.  If you're going over a network, set the
 baud rate to your best estimate of the actual througput.  If you're using
-JOE in a window, set the baud rate to the highest possible (usually
-'stty extb' or 'stty 38400').
+JOE in an X window, set the baud rate to the highest possible (usually 'stty extb'
+or 'stty 38400').
 
 ^K J reformats the current paragraph.  ^T R can be used to change the right
 margin.  The default is the width of the screen.  If auto-indent mode is set,
 indented paragraphs are formated.
 
 Use ^K B to set the beginning of a block and ^K K to set the end of a block. 
-You can then copy, move save or delete the marked blocks.  To turn the
+You can then copy, move, save or delete the marked block.  To turn the
 highlighting off, hit ^K B ^K K (make the beginning and ending the same or
 move the beginning past the ending or move the ending before the beginning).
 
@@ -36,8 +57,8 @@ new window.  ^K I shows either one window or it shows all of the windows.  Use
 ^C to eliminate a window.
 
 Control characters (0-31, 127) are shown underlined.  Characters above 127 are
-shown in inverse.  You can use ` and ^\ to enter control characters
-orcharacters with the 7th bit set.
+shown in inverse.  You can use ` and ^\ to enter control characters or
+characters with the 7th bit set. 
 
 Hit ^K F to find text.  You will be prompted to enter the search string. 
 After hitting Return, you will be prompted for options- you can type 1 or more
@@ -57,11 +78,88 @@ of:
 		replacement string.
 
 		Hit ^L to find the next occurance of the previous search
-		string (with all the same options).
+		string (with all the same options except nnn).
+
+Hit ^K L to goto an entered line number.
+
+Hit ^K 0 to execute a shell command.  If a block was set, the shell command
+gets the block on its standard input and the any output the command writes
+to it's stardard output will replace the block.  If a block was not set, any
+standard output is simply inserted into the text at the cursor location.
+
+You may wish to capture the error output from the command instead of its
+standard output.  This may be done by giving appropraite shell modifiers
+along with the command.  For example if you want to run the command 'make
+bsd':
+
+.br
+	make bsd			stderr -> screen, stdout -> editor
+.br
+	make bsd >&2			stderr -> screen, stdout -> screen
+.br
+	make bsd 2>&1			stderr -> editor, stdout -> editor
+.br
+	make bsd 3>&1 1>&2 2>&3		stderr -> editor, stdout -> screen
+.br
 
 If for some reason JOE gets a signal (that it's going to crash or that the
-system is messing up), it attempts to save the last file edited in a file
-"aborted" in the current directory.
+system is messing up), it attempts to save all of its modified files into a
+file "DEADJOEnnnn" (where nnnn is the process I.D.) in the current directory. 
+Edit this file to get your latest modifications back after such an occurance.
+
+.SH MODES
+A number of editing modes are settable with the ^T command:
+
+.br
+	Insert/Overtype
+.br
+				When you type characters, they will either be
+.br
+				inserted before the existing text or will
+.br
+				replace the existing text.
+
+.br
+	Tab Magic on/off
+.br
+				When tab magic is on, the column number of
+.br
+				characters preceeded by tab characters will
+.br
+				automatically be maintained.
+
+.br
+	Word Wrap on/off
+.br
+				When word wrap is on, words typed past the
+.br
+				right margin will automatically wrap to the
+.br
+				left edge of the screen.
+
+.br
+	Autoindent on/off
+.br
+				When autoindent is on, new lines will begin
+.br
+				with same amount of whitespace from the left
+.br
+				edge of the screen.  Also indented paragraphs
+.br
+				will be formatted properly.
+
+.br
+	Picture mode on/off
+.br
+				When picture mode is on, the right-arrow and
+.br
+				down-arrow keys will move freely on the screen.
+.br
+				I.E., right arrow will not wrap to the next
+.br
+				line and down arrow will not stop at the end
+.br
+				of the file.
 
 .SH FILES
 .DT
